<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dhirajnayak.locationbasedmessaging.ComposeActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayoutSender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/textViewComposeTo"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_weight=".1"
            android:text="@string/text_view_compose_to"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewComposeReceiver"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/textViewComposeTo"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="3.8"
            android:text="" />

        <ImageView
            android:id="@+id/imageViewComposeSelectUser"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight=".1"
            app:srcCompat="@drawable/ic_action_person" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutRegion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayoutSender">


        <TextView
            android:id="@+id/textViewComposeRegionLabel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_weight=".1"
            android:text="@string/text_view_compose_region"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewComposeRegion"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_weight="3.8"
            android:text="" />

        <ImageView
            android:id="@+id/imageViewComposeSelectRegion"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight=".1"
            app:srcCompat="@drawable/location" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollViewMessage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/linearLayoutRegion"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editTextComposeMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine" />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/buttonComposeSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollViewMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/button_send" />


</RelativeLayout>
